fix albums alignement problem

--- a/assets/common/css/style.css
+++ b/assets/common/css/style.css
@@ -293,8 +293,10 @@ footer p {
 }
 
 .album h3 {
+  letter-spacing: 1.5px;
   width: 100%;
-  font-size: 1.5rem;
+  height: 4rem;
+  font-size: 1.7rem;
   margin-bottom: 1rem;
 }
 
